--- a/src/sass/components/header.module.sass
+++ b/src/sass/components/header.module.sass
@@ -11,7 +11,7 @@
   justify-content: space-between
 
   width: 100%
-  padding-block: 0.5vw
+  height: 4vw
 
   transform: translateY(calc(var(--nav-bar-progress) * 25px * -1))
   background-color: rgba(11, 15, 24, calc(var(--nav-bar-progress) - 0.788)) //0.322
@@ -40,3 +40,12 @@
       button
         padding: 1vw -0.5vw
         font-size: 1vw
+
+        &:hover:not(.selected)
+          transition: background 300ms ease, color 300ms ease
+          background-color: #272727
+          color: #DDD
+
+        &.selected
+          transition: background-color 100ms ease
+          background-color: var(--accent-color)
