--- a/src/sass/fragments/_repeatedStyles.sass
+++ b/src/sass/fragments/_repeatedStyles.sass
@@ -1,7 +1,7 @@
 .bluredBox
   backdrop-filter: blur(0.2rem)
   background-color: rgba(11, 15, 24, 0.322)
-  color: white
+  color: var(--secondary-color)
 
 .moveUp
   transform: translateY(5rem)
