--- a/src/sass/pages/projects.module.sass
+++ b/src/sass/pages/projects.module.sass
@@ -109,8 +109,8 @@
         padding: 0.1rem 0.7rem
 
     .details
-      font-weight: bold
-      font-size: 1rem
+      font-weight: normal
+      font-size: 1.2rem
       text-align: justify
       line-height: 1.5rem
 
@@ -126,7 +126,13 @@
       button
         flex-grow: 1
         cursor: pointer
+        padding: 0
 
         a
+          display: flex
           color: var(--main-color)
+          width: 100%
+          height: 100%
           text-decoration: none
+          align-items: center
+          justify-content: center
