--- a/src/sass/pages/projects.module.sass
+++ b/src/sass/pages/projects.module.sass
@@ -25,7 +25,7 @@
       -moz-appearance: none
       text-indent: 1px
       text-overflow: ''
-      border: solid 3px var(--accent-color)
+      border: solid 2px var(--accent-color)
 
 
 
@@ -34,8 +34,6 @@
       option
         color: var(--secondary-color)
         background-color: var(--main-color)
-
-
 
     .carouselControls
       display: flex
@@ -103,6 +101,8 @@
       display: flex
       gap: 0.5rem
 
+      font-weight: normal
+
       span
         border: solid var(--accent-color) 2px
         border-radius: 100vh
@@ -136,3 +136,4 @@
           text-decoration: none
           align-items: center
           justify-content: center
+          font-size: 1rem
